--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -26,7 +26,7 @@
 <!-- Large modal -->
 <!--用于写新的博客-->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <form class="modal-dialog modal-lg" role="document">
+  <form class="modal-dialog modal-lg" role="document" method="post" action="">
   {% csrf_token %}
     <div class="modal-content">
         <div class="modal-header">
