--- a/blog/templates/blog/photos.html
+++ b/blog/templates/blog/photos.html
@@ -6,7 +6,7 @@
         <div class="row">
             {% for image in images %}
               <div class="col-xs-6 col-md-2">
-                <a href="" class="thumbnail">
+                <a href="/id={{ id }}/photo/{{ image.id }}/" class="thumbnail">
                   <img src={% static image.img %} alt="...">
                 </a>
               </div>
