--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -3,6 +3,9 @@
 
 {% block diaries %}
     <div class="center-block" style="width: 50%">
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-3 col-xs-offset-1 col-xs-10">
         {% for essay in essays %}
             <div class="container-fluid">
                 <div class="col-lg-10">
@@ -18,7 +21,7 @@
                         <button type="button" class="btn btn-warning btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button>
                     </div>
                     <div class="col-lg-1">
-                        <button type="button" class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target=".bs-delete-essay-modal-sm-{{ essay.id }}"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button>
                     </div>
                 {% endif %}
             </div>
@@ -32,6 +35,36 @@
                 </div>
             </div>
             <br><br><br><br>
+            {#负责确认删除的模态框#}
+            <div class="modal fade bs-delete-essay-modal-sm-{{ essay.id }}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                  <div class="modal-dialog modal-sm" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                        <div class="row">
+                            <form method="post" action="{% url "blog:deleteEssay" id %}">
+                                {% csrf_token %}
+                                <div class="col-md-offset-1">
+                                    <label><h4>你真的忍心删除我吗？(>﹏<)</h4></label>
+                                    <input type="text" hidden value="{{ essay.id }}" name="essayID">
+                                    <input type="text" hidden value="{{ contentType }}" name="contentType">
+                                </div>
+                                <div class="col-md-offset-3 col-md-2">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">不了不了</button>
+                                </div>
+                                <div class="col-md-offset-1 col-md-2">
+                                    <button type="submit" class="btn btn-danger">我就是不要你了</button>
+                                </div>
+                            </form>
+                        </div>
+                          <div class="modal-footer">
+
+                          </div>
+                    </div>
+                  </div>
+            </div>
         {% endfor %}
+        </div>
     </div>
 {% endblock %}
