完善了上传文件后添加博客页面的显示问题

--- a/blog/templates/blog/addFiles.html
+++ b/blog/templates/blog/addFiles.html
@@ -43,11 +43,13 @@
                 contentType:false,  // 告诉jquery不设置内容格式
                 success:function (data,status) {
                 {
-                    if(data=='上传成功')
+                    //此处是处理json类型数据的范例
+                    if(data.response=='上传成功')
                     {
-                        alert(data);
+                        alert(data.response);
                         var y=document.createElement('option');
-                        y.text = 'essays/'+File.name;
+                        y.text = data.path;
+                        y.value=data.id;
                         //给父窗口的label多选框添加刚刚新增的label
                         window.opener.document.getElementById('fileSelect').add(y,0);
                         window.close();
